--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,7 @@
   </script>
 
   <style>
+    .button--primary{color:var(--white);background-color: #ea4e1e;}.button--primary:hover{background: #ef8317;}
   {% capture include_to_scssify %}
     {% include main.scss %}
   {% endcapture %}
