--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,13 +1,13 @@
 <!-- begin comments -->
 <div class="show-comments">
-  <button class="button disqus-button" id="show-comments-button" onclick="disqus();return false;">Show Comments</button>
+  <button class="button disqus-button" id="show-comments-button" onclick="disqus();return false;">Mostrar Comentários</button>
 </div>
 
 <div id="disqus_thread" class="post__comments">
   <div id="disqus_empty"></div>
 </div>
-
-<script>
+<div class="fb-comments" data-href="{{ post.url | prepend: site.baseurl }}" data-width="100%" data-numposts="10" data-locale="pt_BR" data-colorscheme="dark"></div>
+<!--<script>
   var disqus_loaded = false;
   var disqus_shortname = '{{ site.disqus-identifier }}';
   var disqus_container = document.getElementById("disqus_thread");
@@ -27,9 +27,9 @@
       disqus_container.classList.add("is-open");
     }
   }
-</script>
+</script>-->
 
-<noscript>Please enable JavaScript to view the
+<!--<noscript>Please enable JavaScript to view the
   <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>
+</noscript>-->
 <!-- end comments -->
