--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,18 +19,15 @@
   <meta property="og:title" content="{% if page.url == "/" %}{{ site.title }}{% else %}{{ page.title }} – {{ site.title }}{% endif %}">
   <meta property="og:description" content="{% if page.url == "/" %}{{ site.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
   <meta property="og:image" content="{{ page.image | absolute_url }}">
-
+  <meta property="fb:app_id" content="122527777827024"/>	
+  <meta property="fb:admins" content="100000009730750"/>
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700;900&display=swap" as="style">
-
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700;900&display=swap" rel="stylesheet">
-
 
   <!-- Ionicons -->
   <link rel="preload" href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" as="style">
-
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
 
   <script>
