--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 {% include head.html %}
-
 <body>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v19.0" nonce="TuOeSiHN"></script>
   {% if site.google-analytics %}
     {% include google-analytics.html %}
   {% endif %}
-
   {% include header.html %}
-
   <!-- begin content -->
   <main class="content" aria-label="Content">
     {{ content }}
   </main>
   <!-- end content -->
-
   {% include footer.html %}
-
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
   <script src="{{ site.baseurl }}/js/common.js"></script>
 </body>
-
 </html>
