--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -4,9 +4,9 @@
 </div>
 
 <div id="disqus_thread" class="post__comments">
+  <div class="fb-comments" data-href="{{ post.url | prepend: site.baseurl }}" data-width="100%" data-numposts="10" data-locale="pt_BR" data-colorscheme="dark"></div>
   <div id="disqus_empty"></div>
 </div>
-<div class="fb-comments" data-href="{{ post.url | prepend: site.baseurl }}" data-width="100%" data-numposts="10" data-locale="pt_BR" data-colorscheme="auto"></div>
 <!--<script>
   var disqus_loaded = false;
   var disqus_shortname = '{{ site.disqus-identifier }}';
