--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -6,7 +6,7 @@
 <div id="disqus_thread" class="post__comments">
   <div id="disqus_empty"></div>
 </div>
-<!--<script>
+<script>
   var disqus_loaded = false;
   var disqus_shortname = '{{ site.disqus-identifier }}';
   var disqus_container = document.getElementById("disqus_thread");
@@ -26,9 +26,9 @@
       disqus_container.classList.add("is-open");
     }
   }
-</script>-->
+</script>
 
-<!--<noscript>Please enable JavaScript to view the
+<noscript>Please enable JavaScript to view the
   <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>-->
+</noscript>
 <!-- end comments -->
