--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
       {%if page.image %}
       <div class="col col-6 col-d-12">
         <div class="post-image">
-          <img class="lazy" data-src="{{site.baseurl}}{{page.image}}" alt="{{page.title}}">
+          <img class="lazy" data-src="{{site.cdnurl}}{{page.image}}?resize=528,343" alt="{{page.title}}">
         </div>
       </div>
       {%endif %}
