--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,7 +85,7 @@ layout: default
           rel="nofollow"><i class="ion ion-logo-pinterest"></i></a>
         </li>
         <li class="share__item">
-          <a class="share__link share__linkedin" href="https://api.whatsapp.com/send?text={% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} - {% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %} [#] {{ page.url | replace:'index.html','' | absolute_url }}"
+          <a class="share__link share__linkedin" href="https://api.whatsapp.com/send?text={% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} - {% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}  {{ page.url | replace:'index.html','' | absolute_url }}"
           onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Compartilhar no Whatsapp" rel="nofollow"><i class="ion ion-logo-whatsapp"></i></a>
         </li>
       </ul>
