--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,22 @@
   <link rel="preload" href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" as="style">
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
 
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="msapplication-TileImage" content="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=32,32">
+  <link rel="apple-touch-icon-precomposed" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=32,32">
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=152,152">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=144,144">
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=120,120">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=114,114">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=192,192">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=144,144">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=72,72">
+  <link rel="apple-touch-icon-precomposed" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=32,32">
+  <link rel="icon" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=32,32" sizes="32,32">
+  <link rel="shortcut icon" href="https://pudimperfeito.50x.com.br/favicon.ico" />
+  <link rel="icon" sizes="16,16" href="https://pudimperfeito.50x.com.br/favicon.ico">
+  
   <script>
     {% if site.color_scheme == "auto" %}
     if (localStorage.getItem("theme") === "dark") {
