--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,14 +10,10 @@
             <p class="hero__description">{{ site.hero.hero__description }}</p>
             {% if site.mailchimp == "enable" %}
             <div class="hero__subscribe">
-			<a href="./ebook-v1/"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a>
-              <!--<form class="subscribe-form validate"
-                action="{% if site.mailchimp__identifier %}//{{site.mailchimp__identifier}}{% else %}#{% endif %}" method="POST" id="membedded-subscribe-form" name="membedded-subscribe-form" target="_blank" novalidate>
-                <label class="screen-reader-text" for="mce-EMAIL">Email address</label>
-                <input class="subscribe-email required email" id="mce-EMAIL" type="text" name="EMAIL"
-                  placeholder="{% if site.mailchimp__input__text %}{{ site.mailchimp__input__text }}{% else %}Email address{% endif %}">
-                <button class="button button--primary subscribe-button" id="membedded-subscribe" type="submit" name="subscribe">{{ site.mailchimp__button__text }}</button>
-              </form>-->
+			
+              <form>
+		      <a href="./ebook-v1/"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a>
+              </form>
             </div>
             {% endif %}
           </div>
