--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,11 +8,12 @@
           <div class="hero__left">
             <h1 class="hero__title">{{ site.hero.hero__title }}</h1>
             <p class="hero__description">{{ site.hero.hero__description }}</p>
+            <p><a href="./ebook-v1/"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a></p>
             {% if site.mailchimp == "enable" %}
             <div class="hero__subscribe">
 			
               <form>
-		      <a href="./ebook-v1/"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a>
+		      
               </form>
             </div>
             {% endif %}
