--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,15 +7,9 @@
 
           <div class="hero__left">
             <h1 class="hero__title">{{ site.hero.hero__title }}</h1>
-            <p class="hero__description">{{ site.hero.hero__description }}</p>
-            <p><a href="./ebook-v1/"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a></p>
+            <p class="hero__description">{{ site.hero.hero__description }}</p><br>
             {% if site.mailchimp == "enable" %}
-            <div class="hero__subscribe">
-			
-              <form>
-		      
-              </form>
-            </div>
+            <center><p><a href="{% if site.mailchimp__identifier %}//{{site.mailchimp__identifier}}{% else %}#{% endif %}"  class="button button--primary subscribe-button" id="membedded-subscribe">Baixe Agora!</a></p></center>
             {% endif %}
           </div>
 
