--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,6 +67,6 @@
   </div>
 
 </footer>
-<style>.button--primary{background-color: #ea4e1e;}.button--primary:hover{background: #ef8317;}</style>
+<style> .button{width: 98%;}.button--primary{background-color: #ea4e1e;}.button--primary:hover{background: #ef8317;}</style>
 </head>
 <!-- end footer -->
