--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col col-12">
           <div class="footer__info-box">
-            <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>. Feito com <i class="icon ion-md-heart"></i> em #Ulipa, Hospedado por<a href="https://jekyllthemes.io/developers/artem-sheludko"><i class="ion ion-logo-googleplus"></a>.</div>
+            <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>. Feito com <i class="icon ion-md-heart"></i> em #Ulipa, Hospedado por <a href="https://cloud.google.com/free/?utm_source=50x.com.br&utm_medium=cpc&utm_campaign=latam-BR-all-pt-dr-AKWS-all-all-trial-e-dr-1011454-LUAC0013595"><i class="ion ion-logo-google"></a>.</div>
             <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
           </div>
         </div>
