--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,6 +72,6 @@
   </div>
 
 </footer>
-<style> .button{width: 98%;}.button--primary{background-color: #ea4e1e;}.button--primary:hover{background: #ef8317;}</style>
+<style> .button{width: 98%;}.button--primary{background-color: #ea4e1e;}.button--primary:hover{background: #ef8317;} .ion-md-heart:before { content: "\f308"; color: red; font-size: large; }</style>
 </head>
 <!-- end footer -->
