--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
                 <a href="https://cloud.google.com/free/" target="_blank">Google Cloud</a> | 
                 <a href="https://www.cloudflare.com/pt-br/" target="_blank">Cloudflare</a> | 
                 <a href="https://br.wordpress.org/" target="_blank">WP.com</a><p>
-                <a href="./contato/#termo-de-uso">Termo de Uso</a> | <a href="./contato/#privacidade">Privacidade</a> | <a href="./contato">Contato</a> | <a href="./tags/">Sitemap</a> | <a href="https://dashboard.kiwify.com.br/join/affiliate/XYC1CrQN" target="_blank">Afiliar-se</a>.</div>
+                <a href="./contato">Contato</a> | <a href="./contato/#termo-de-uso">Termo de Uso</a> | <a href="./contato/#privacidade">Privacidade</a> | <a href="./tags/">Sitemap</a> | <a href="https://dashboard.kiwify.com.br/join/affiliate/XYC1CrQN" target="_blank">Afiliar-se</a>.</div>
             <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
           </div>
         </div>
