--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,12 +62,9 @@
       <div class="row">
         <div class="col col-12">
           <div class="footer__info-box">
-            <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>. 
-              Feito com <i class="icon ion-md-heart"></i> em #Ulipa<p>
-                <a href="https://cloud.google.com/free/" target="_blank">Google Cloud</a> | 
-                <a href="https://www.cloudflare.com/pt-br/" target="_blank">Cloudflare</a> | 
-                <a href="https://br.wordpress.org/" target="_blank">WP.com</a><p>
-                <a href="./contato">Contato</a> | <a href="./contato/#termo-de-uso">Termo de Uso</a> | <a href="./contato/#privacidade">Privacidade</a> | <a href="./tags/">Sitemap</a> | <a href="https://dashboard.kiwify.com.br/join/affiliate/XYC1CrQN" target="_blank">Afiliar-se</a>.</div>
+            <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.title}}</a>. Feito com <i class="icon ion-md-heart"></i> em #Ulipa<p>
+              Melhorado por: <a href="https://cloud.google.com/free/" target="_blank">Google Cloud</a> | <a href="https://www.cloudflare.com/pt-br/" target="_blank">Cloudflare</a> | <a href="https://br.wordpress.org/" target="_blank">WP.com</a><p>
+                <a href="./contato">Contato</a> | <a href="./contato/#termo-de-uso">Termos de Uso</a> | <a href="./contato/#privacidade">Política de privacidade</a> | <a href="./tags/">Sitemap</a> | <a href="https://dashboard.kiwify.com.br/join/affiliate/XYC1CrQN" target="_blank">Afiliar-se</a>.</div>
             <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
           </div>
         </div>
