--- a/_includes/section-tags.html
+++ b/_includes/section-tags.html
@@ -5,7 +5,7 @@
       <div class="col col-12">
         <div class="section__head">
           <h3 class="section__title">Tags</h3>
-          <a href="{{ site.baseurl }}/tags/" class="section__link">See all</a>
+          <a href="{{ site.baseurl }}/tags/" class="section__link">Ver tudo</a>
         </div>
         {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{%
         endfor %}{% endcapture %}
