--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,6 +62,7 @@
     </div>
   </div>
 </header>
+<center><script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS"></script></center>
 <!-- end header -->
 
 {% include search.html %}
