--- a/_includes/article.html
+++ b/_includes/article.html
@@ -35,4 +35,5 @@
 
     </div>
   </div>
+  <center><script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS"></script></center>
 </div>
