--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,6 +58,7 @@ layout: default
 </div>
 
 <!-- begin post -->
+<script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS"></script><br>
 <div class="container animate">
 
   <article class="post">
