--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ layout: default
 <div class="container animate">
 
   <article class="post">
-
+<script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS2"></script><br>
     <div class="post__content">
       {{ content }}
     </div>
