--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,12 +58,10 @@ layout: default
 </div>
 
 <!-- begin post -->
-<script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS"></script><br>
 <div class="container animate">
-
   <article class="post">
-<script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS2"></script><br>
     <div class="post__content">
+      <p><script src="https://pudimperfeito.50x.com.br/extra/banner468x60.js" nonce="PudimADS"></script></p>
       {{ content }}
     </div>
 
