--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,37 @@
   <link rel="icon" href="https://i1.wp.com/pudimperfeito.50x.com.br/images/favicon.png?resize=32,32" sizes="32,32">
   <link rel="shortcut icon" href="https://pudimperfeito.50x.com.br/favicon.ico" />
   <link rel="icon" sizes="16,16" href="https://pudimperfeito.50x.com.br/favicon.ico">
+
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Recipe",
+  "name": "{% if page.url == "/" %}{{ site.title }}{% else %}{{ page.title }} – {{ site.title }}{% endif %}",
+  "url": "{{ page.url | replace:'index.html','' | absolute_url }}",
+  "image": {
+    "@context": "http://schema.org",
+    "@type": "ImageObject",
+    "url": "{{ page.image | absolute_url }}"
+  },
+  "author": {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "{{site.title}}"
+  },
+  "datePublished": "{{ post.date | date_to_xmlschema }}",
+  "description": "{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "reviewCount": "60",
+    "ratingValue": "4.8",
+    "ratingCount": "589",
+    "bestRating": 5,
+    "worstRating": 1
+  },
+  "keywords": "Receita de Pudim Perfeito",
+  "totalTime": "PT90M",
+}
+</script>
   
   <script type="application/ld+json" class="yoast-schema-graph">{"@context":"https://schema.org","@graph":[{"@type":"CollectionPage","@id":"{{ page.url | replace:'index.html','' | absolute_url }}","url":"{{ page.url | replace:'index.html','' | absolute_url }}","name":"{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}","isPartOf":{"@id":"{{ page.url | replace:'index.html','' | absolute_url }}#website"},"description":"{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}","breadcrumb":{"@id":"{{ page.url | replace:'index.html','' | absolute_url }}#breadcrumb"},"inLanguage":"pt-BR"},{"@type":"BreadcrumbList","@id":"{{ page.url | replace:'index.html','' | absolute_url }}#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"name":"Início"}]},{"@type":"WebSite","@id":"{{ page.url | replace:'index.html','' | absolute_url }}#website","url":"{{ page.url | replace:'index.html','' | absolute_url }}","name":"{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}","description":"{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}","potentialAction":[{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"{{ page.url | replace:'index.html','' | absolute_url }}?s={search_term_string}"},"query-input":"required name=search_term_string"}],"inLanguage":"pt-BR"}]}</script>
   
